--- a/resume-1page.html
+++ b/resume-1page.html
@@ -83,7 +83,8 @@ scholarships.</p>
 <h2 id="projects">PROJECTS</h2>
 <ul>
 <li><strong>LADOTNET Organizer</strong> — Host and organize community
-meetups; presented “Resilience Engineering with Polly.”<br />
+meetups; presented <a href="https://youtu.be/ojYKQESK9KA">Resilience
+Engineering with Polly</a><br />
 </li>
 <li><strong>Hyperion JSON Spec</strong> — Contributor and reviewer;
 drove adoption of lightweight API conventions.<br />
