--- a/resume.html
+++ b/resume.html
@@ -68,9 +68,10 @@ service hardening.<br />
 reviews and guiding teams toward consistent, developer-friendly API
 standards.<br />
 - Earlier DevOps role focused on CI/CD automation, cloud deployments,
-and modernizing monolithic systems. - Deployed telemetry and monitoring
-that exposed critical performance bottlenecks, leading refactoring
-efforts to improving response times.<br />
+and modernizing monolithic systems.<br />
+- Deployed telemetry and monitoring that exposed critical performance
+bottlenecks, leading refactoring efforts to improving response
+times.<br />
 - Previously led a Customer Portal feature team, delivering new CDN
 configuration products and migrating customers from legacy
 versions.<br />
